--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 # Mongodb connection path
-MONGO_URI=mongodb://localhost:27017/stm
+MONGO_URI=mongodb+srv://stmapi:stmapi123@cluster0.n9ssr.mongodb.net/stm?retryWrites=true&w=majority
 PORT_NUMBER=3000
