--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stm-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
