--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
+    "npx": "^10.2.2",
     "url": "^0.11.0"
   },
   "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/abhikhangura/Node-Api.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
